--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "henry",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "pg": "^8.4.2"
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+      "start": ":node index.js",
+      "start:dev": "nodemon index.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Marcelle Ferreira",
+    "license": "MIT",
+    "dependencies": {
+      "cors": "^2.8.5",
+      "dotenv": "^8.2.0",
+      "express": "^4.17.1",
+      "express-jwt": "^6.0.0",
+      "jwks-rsa": "^2.0.4",
+      "nodemon": "^2.0.4",
+      "pg": "^7.18.2",
+      "swagger-ui-express": "^4.1.6",
+      "yamljs": "^0.3.0"
+    }
   }
-}
