--- a/server/package.json
+++ b/server/package.json
@@ -4,21 +4,26 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": ":node index.js",
-      "start:dev": "nodemon index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": ":node index.js",
+        "start:dev": "nodemon index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Marcelle Ferreira",
     "license": "MIT",
     "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^8.2.0",
-      "express": "^4.17.1",
-      "express-jwt": "^6.0.0",
-      "jwks-rsa": "^2.0.4",
-      "nodemon": "^2.0.4",
-      "pg": "^7.18.2",
-      "swagger-ui-express": "^4.1.6",
-      "yamljs": "^0.3.0"
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-jwt": "^6.0.0",
+        "jwks-rsa": "^2.0.4",
+        "morgan": "^1.10.0",
+        "node-uuid": "^1.4.8",
+        "nodemon": "^2.0.4",
+        "path": "^0.12.7",
+        "pg": "^7.18.2",
+        "rotating-file-stream": "^2.1.5",
+        "swagger-ui-express": "^4.1.6",
+        "uuid": "^8.3.2",
+        "yamljs": "^0.3.0"
     }
-  }
+}
