--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
+        "express-validator": "^6.12.1",
         "jwks-rsa": "^2.0.4",
         "morgan": "^1.10.0",
         "node-uuid": "^1.4.8",
